--- a/resident/settings.yaml
+++ b/resident/settings.yaml
@@ -13,7 +13,7 @@ chunk_training_mode: disabled
 # see shadow_pricing.yaml for additional settings
 use_shadow_pricing: True
 
-memory_profile: False
+memory_profile: True
 
 # Sample TAZ before MAZ in destination choice
 want_dest_choice_presampling: True
@@ -24,9 +24,7 @@ want_dest_choice_sample_tables: False
 
 # trace household id; comment out or leave empty for no trace
 # households with all tour types
-trace_hh_id:
-
-chunk_training_mode: disabled
+# trace_hh_id: 1051657
 
 # trace origin, destination in accessibility calculation; comment out or leave empty for no trace
 #trace_od:
@@ -46,6 +44,8 @@ input_table_list:
       mgra: home_zone_id
       hinc: income
       hht: HHT
+    recode_columns:
+      home_zone_id: land_use.zone_id
     keep_columns:
       - home_zone_id
       - income
@@ -55,12 +55,9 @@ input_table_list:
       - num_workers
       - bldgsz
       - unittype
-      - poverty
   - tablename: persons
     filename: persons.csv
     index_col: person_id
-    rename_columns:
-      PERID: person_id
     rename_columns:
       hhid: household_id
       perid: person_id
@@ -81,6 +78,9 @@ input_table_list:
     index_col: zone_id
     rename_columns:
       MAZ: zone_id
+    recode_columns:
+      zone_id: zero-based
+      TAZ: zero-based
     drop_columns:
       - i1
       - i2
@@ -101,7 +101,7 @@ input_table_list:
       - zip09
       - luz_id
 
-cleanup_pipeline_after_run: True
+cleanup_pipeline_after_run: False
 
 output_tables:
   h5_store: False
@@ -110,15 +110,41 @@ output_tables:
   sort: True
   tables:
     - checkpoints
-    - accessibility
-    - land_use
-    - households
-    - persons
-    - tours
-    - trips
+    - tablename: accessibility
+      decode_columns:
+        zone_id: land_use.zone_id
+    - tablename: land_use
+      decode_columns:
+        zone_id: land_use.zone_id
+        TAZ: land_use_taz.TAZ
+    - tablename: households
+      decode_columns:
+        home_zone_id: land_use.zone_id
+        TAZ: land_use_taz.TAZ
+    - tablename: persons
+      decode_columns:
+        home_zone_id: land_use.zone_id
+        school_zone_id: nonnegative | land_use.zone_id
+        workplace_zone_id: nonnegative | land_use.zone_id
+    - tablename: trips
+      decode_columns:
+        origin: land_use.zone_id
+        destination: land_use.zone_id
+        origin_parking_zone: nonnegative | land_use.zone_id
+        parking_zone: nonnegative | land_use.zone_id
+        trip_period: time_period
+        otaz: land_use_taz.TAZ
+        dtaz: land_use_taz.TAZ
+    - tablename: tours
+      decode_columns:
+        origin: land_use.zone_id
+        destination: land_use.zone_id
     - joint_tour_participants
     - vehicles
-    - proto_disaggregate_accessibility
+    - tablename: proto_disaggregate_accessibility
+      decode_columns:
+        home_zone_id: land_use.zone_id
+        TAZ: land_use_taz.TAZ
     - disaggregate_accessibility
 
 distributed_time_factor_work_mean: 1.0
@@ -127,8 +153,6 @@ distributed_time_factor_nonwork_mean: 1.0
 distributed_time_factor_nonwork_stddev: 0.6
 distributed_time_factor_min: 0.1
 distributed_time_factor_max: 10
-
-resume_after:
 
 models:
   ### mp_init_proto_pop (single process)
@@ -188,3 +212,13 @@ models:
   - track_skim_usage
   - write_trip_matrices
   - write_tables
+
+# These skim tables are included in the model as two sets, one as
+#   time-independent  (e.g. BIKE_TIME) and one as time-dependent
+#   (e.g. BIKE_TIME__AM), although the actual data is all time-independent.
+#   This prevents the (pseudo-) time-dependent tables from being loaded,
+#   which would be a waste of memory, and causes problems with the
+#   two-zone data backing these skims.
+omx_ignore_patterns:
+  - "BIKE_TIME__.+"
+  - "BIKE_LOGSUM__.+"
