--- a/resident/accessibility.yaml
+++ b/resident/accessibility.yaml
@@ -1,9 +1,6 @@
 
-# columns from land_use table to add to df for destinations
+# columns from land_use table to add to df
 land_use_columns: ['emp_ret', 'emp_total', 'hh', 'walk_dist_local_bus']
-
-# columns from land_use table to add to df for origins
-land_use_columns_orig: ['walk_dist_local_bus']
 
 CONSTANTS:
   # dispersion parameters
