--- a/resident/logging.yaml
+++ b/resident/logging.yaml
@@ -19,8 +19,8 @@ logging:
       handlers: [console, logfile]
       propagate: false
 
-    sharrow:
-      level: INFO
+    orca:
+      level: WARN
       handlers: [console, logfile]
       propagate: false
 
@@ -28,8 +28,7 @@ logging:
 
     logfile:
       class: logging.FileHandler
-      filename:
-        get_log_file_path: 'activitysim.log'
+      filename: !!python/object/apply:activitysim.core.config.log_file_path ['activitysim.log']
       mode: w
       formatter: fileFormatter
       level: NOTSET
@@ -37,7 +36,7 @@ logging:
     console:
       class: logging.StreamHandler
       stream: ext://sys.stdout
-      formatter: elapsedFormatter
+      formatter: simpleFormatter
       level: INFO
 
   formatters:
@@ -53,7 +52,3 @@ logging:
       format: '%(asctime)s - %(levelname)s - %(name)s - %(message)s'
       datefmt: '%d/%m/%Y %H:%M:%S'
 
-    elapsedFormatter:
-      (): activitysim.core.tracing.ElapsedTimeFormatter
-      format: '[{elapsedTime}] {levelname:s}: {message:s}'
-      style: '{'
