--- a/resident/vehicle_type_choice.yaml
+++ b/resident/vehicle_type_choice.yaml
@@ -2,6 +2,7 @@
 
 SPEC: vehicle_type_choice_op4.csv
 COEFFICIENTS: vehicle_type_choice_op4_coefficients.csv
+ALTS: vehicle_type_choice_op4_alternatives.csv
 
 # SPEC: vehicle_type_choice_op2.csv
 # COEFFICIENTS: vehicle_type_choice_op2_coefficients.csv
@@ -94,7 +95,7 @@ alts_preprocessor:
   SPEC: vehicle_type_choice_annotate_alts_preprocessor
   DF: alts_wide
 
-COLS_TO_INCLUDE_IN_ALTS_TABLE:
+COLS_TO_INCLUDE_IN_ALTERNATIVES_TABLE:
   - age
   - fuel_type_num_coded
   - body_type_num_coded
@@ -105,7 +106,6 @@ COLS_TO_INCLUDE_IN_ALTS_TABLE:
   - logged_makes
   - logged_chargers_per_capita
   - SAN
-  - NewPrice
 
 # annotate_persons:
 #   SPEC: annotate_persons_vehicle_type
@@ -125,15 +125,8 @@ annotate_households:
 #   TABLES:
 
 CONSTANTS:
-  # Select region for model and input the MSA population
-  # Expressions for CBSA values are implemented for:
-  #   San Francisco (SFO), San Diego (SAN), Atlanta (ATL),
-  #   Seattle (SEA), Detroit (DET), Minneapolis (MSP),
-  #   Washington DC (DCA), Oregon (OREG), Ohio (OHIO)
-  CBSA: SAN
-  MSA_POP: 3266698
-  # calculated using 1130 chargers / MSA_POP
-  # just an initial estimate from https://www.plugshare.com/directory/us/california/san-diego
+  # calculated using charger count / population
   CHARGERS_PER_CAP: 0.00034592
   # chargers per cap used in vehicle type model estimation
   # CHARGERS_PER_CAP: 0.000721205
+  scenarioYear: 2022
